--- a/week2/style.css
+++ b/week2/style.css
@@ -1,6 +1,6 @@
 		body {
 			width:320px;
-			background:#eee;
+			background:black;
 			margin:0;
 			padding:0;
 			font-family: Helvetica, Arial, sans-serif;
@@ -54,7 +54,7 @@
 		}
 		.box {
 			width:100px;
-			float:left;
+			float:right;
 			padding:10px;
 			color:#fff;
 			height:50px;
@@ -63,6 +63,9 @@
 		}
 		.box1 {
 			background:#1E3F6E;
+		}
+		.box1 {
+			background:#000000;
 		}
 		.box2 {
 			background:#1E5B6E;
